# walmart_project_last

./: .env.example  .gitignore  DATA_SCIENCE_TECHNICAL_DOC.md  DEPLOYMENT_GUIDE.md  MODEL_TRAINING_GUIDE.md  Modelfile.walmart  PRESENTATION_NOTES.md  Procfile  README.md  advanced_model_training.py  cloud_ollama_integration.py  cloud_ollama_setup.md  create_walmart_model.py  index.html  model_analytics.py  model_optimizer.py  ollama_api_wrapper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_ollama.py  training_data.json  walmart.py
.github/workflows/: deploy-wiki.yml
wiki/: Ana Sayfa.md  Deployment.md  Hızlı Başlangıç.md  Kullanım Kılavuzu.md  Kurulum Rehberi.md  Model Eğitimi.md  README.md  SSS.md  Sistem Mimarisi.md  Wiki Kurulum Rehberi.md  index.html
wiki/.obsidian/: app.json  appearance.json  manifest.json  workspace.json
