[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walmart-content-generator"
version = "1.0.0"
description = "AI-powered Walmart product content generator with Ollama and OpenAI support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Walmart Content AI Team", email = "dev@walmart-ai.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "openai>=1.35.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
ollama = [
    "requests>=2.31.0",
]
openai = [
    "openai>=1.35.0",
]

[project.urls]
Homepage = "https://github.com/yusuf44777/walmart_project_last"
Repository = "https://github.com/yusuf44777/walmart_project_last"
Documentation = "https://github.com/yusuf44777/walmart_project_last/wiki"
"Bug Reports" = "https://github.com/yusuf44777/walmart_project_last/issues"

[project.scripts]
walmart-content = "walmart:main"
walmart-train = "create_walmart_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["walmart*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
